--- a/index.html
+++ b/index.html
@@ -4,146 +4,230 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Douglas Arigah | Core Network & Telco Cloud Engineer</title>
+
     <link rel="icon" href="favicon.ico" type="image/png" />
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <!-- Icons & CSS -->
     <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Arigah</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Arigah</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- ================= HERO ================= -->
+<section id="home" class="d-flex align-items-center justify-content-center vh-100 text-center">
+    <div class="overlay"></div>
+
+    <div class="container-content">
+
+        <h1 class="display-3 fw-bold animate__animated animate__fadeIn">
+            Hello, I'm Arigah!
+        </h1>
+
+        <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">
+            Core Network Design | Telco Cloud | Coding | Philosophy
+        </p>
+
+        <!-- Animated Wave Art -->
+        <img
+            src="images/coverart.png"
+            alt="Optimization Wave Art"
+            class="hero-wave"
+        />
+
+        <div class="mt-4">
+            <a href="#projects"
+               class="btn btn-gradient btn-lg me-2 btn-custom animate__animated animate__fadeIn animate__delay-3s">
+                View My Work
+            </a>
+
+            <a href="#contact"
+               class="btn btn-primary btn-lg btn-custom animate__animated animate__fadeIn animate__delay-3s">
+                Contact Me
+            </a>
+        </div>
+
+        <div class="icons-social mt-5 animate__animated animate__fadeIn animate__delay-4s">
+            <a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://dev.to/darigah" class="text-white mx-2 fs-3"><i class="fab fa-dev"></i></a>
+            <a target="_blank" href="https://stackoverflow.com/story/darigah" class="text-white mx-2 fs-3"><i class="fab fa-stack-overflow"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/darigah" class="text-white mx-2 fs-3"><i class="fab fa-linkedin"></i></a>
+            <a target="_blank" href="https://medium.com/@darigah" class="text-white mx-2 fs-3"><i class="fab fa-medium"></i></a>
+        </div>
+
+    </div>
+</section>
+
+<!-- ================= ABOUT ================= -->
+<section id="about" class="py-5">
+    <div class="container">
+        <h2 class="text-center mb-5">About Me</h2>
+
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <p class="lead">
+                    I'm a passionate Core Network & Telco Cloud Engineer with expertise in designing scalable
+                    telecom solutions. I love coding, exploring cloud technologies, and cheering for my favorite
+                    F1 teams. My goal is to bridge technology and innovation to create impactful solutions.
+                </p>
+            </div>
+
+            <div class="col-md-6 text-center">
+                <img src="profile-placeholder.jpg"
+                     alt="Douglas Arigah"
+                     class="img-fluid rounded-circle profile-img">
             </div>
         </div>
-    </nav>
+    </div>
+</section>
 
-    <!-- Hero Section -->
-    <section id="home" class="d-flex align-items-center justify-content-center vh-100 text-center">
-        <div class="overlay"></div>
-        <div class="container-content">
-            <h1 class="display-3 fw-bold animate__animated animate__fadeIn">Hello, I'm Arigah!</h1>
-            <p class="lead mt-3 animate__animated animate__fadeIn animate__delay-1s">Core Network Design | Telco Cloud | Coding | F1 Enthusiast</p>
-            <div class="mt-4">
-                <a class="btn btn-gradient btn-lg me-2 btn-custom animate__animated animate__fadeIn animate__delay-2s" href="#projects">View My Work</a>
-                <a class="btn btn-primary btn-lg btn-custom animate__animated animate__fadeIn animate__delay-2s" href="#contact">Contact Me</a>
-            </div>
-            <div class="icons-social mt-5 animate__animated animate__fadeIn animate__delay-3s">
-                <a target="_blank" href="https://github.com/darigah" class="text-white mx-2 fs-3"><i class="fab fa-github"></i></a>
-                <a target="_blank" href="https://dev.to/darigah" class="text-white mx-2 fs-3"><i class="fab fa-dev"></i></a>
-                <a target="_blank" href="https://stackoverflow.com/story/darigah" class="text-white mx-2 fs-3"><i class="fab fa-stack-overflow"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/in/darigah" class="text-white mx-2 fs-3"><i class="fab fa-linkedin"></i></a>
-                <a target="_blank" href="https://medium.com/@darigah" class="text-white mx-2 fs-3"><i class="fab fa-medium"></i></a>
-            </div>
-        </div>
-    </section>
+<!-- ================= PROJECTS ================= -->
+<section id="projects" class="py-5 bg-dark text-white">
+    <div class="container">
+        <h2 class="text-center mb-5">Projects</h2>
 
-    <!-- About Section -->
-    <section id="about" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">About Me</h2>
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <p class="lead">I'm a passionate Core Network & Telco Cloud Engineer with expertise in designing scalable telecom solutions. I love coding, exploring cloud technologies, and cheering for my favorite F1 teams. My goal is to bridge technology and innovation to create impactful solutions.</p>
-                </div>
-                <div class="col-md-6 text-center">
-                    <img src="profile-placeholder.jpg" alt="Douglas Arigah" class="img-fluid rounded-circle profile-img">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="py-5 bg-dark text-white">
-        <div class="container">
-            <h2 class="text-center mb-5">Projects</h2>
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card project-card">
-                        <div class="card-body text-center">
-                            <i class="fas fa-network-wired fa-3x mb-3"></i>
-                            <h5 class="card-title">5G Core Network Design</h5>
-                            <p class="card-text">Designed a scalable 5G core network architecture for high-speed connectivity.</p>
-                            <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
-                        </div>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card project-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-network-wired fa-3x mb-3"></i>
+                        <h5 class="card-title">5G Core Network Design</h5>
+                        <p class="card-text">
+                            Designed a scalable 5G core network architecture for high-speed connectivity.
+                        </p>
+                        <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card project-card">
-                        <div class="card-body text-center">
-                            <i class="fas fa-cloud fa-3x mb-3"></i>
-                            <h5 class="card-title">Telco Cloud Migration</h5>
-                            <p class="card-text">Led migration of legacy systems to a Kubernetes-based telco cloud.</p>
-                            <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
-                        </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card project-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-cloud fa-3x mb-3"></i>
+                        <h5 class="card-title">Telco Cloud Migration</h5>
+                        <p class="card-text">
+                            Led migration of legacy systems to a Kubernetes-based telco cloud.
+                        </p>
+                        <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card project-card">
-                        <div class="card-body text-center">
-                            <i class="fas fa-code fa-3x mb-3"></i>
-                            <h5 class="card-title">Automation Scripts</h5>
-                            <p class="card-text">Developed Python scripts to automate network monitoring tasks.</p>
-                            <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
-                        </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card project-card">
+                    <div class="card-body text-center">
+                        <i class="fas fa-code fa-3x mb-3"></i>
+                        <h5 class="card-title">Automation Scripts</h5>
+                        <p class="card-text">
+                            Developed Python scripts to automate network monitoring tasks.
+                        </p>
+                        <a href="#" class="btn btn-outline-light btn-sm">Learn More</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">Get in Touch</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <form>
-                        <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Name" required>
-                        </div>
-                        <div class="mb-3">
-                            <input type="email" class="form-control" placeholder="Email" required>
-                        </div>
-                        <div class="mb-3">
-                            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-gradient btn-lg w-100">Send Message</button>
-                    </form>
-                </div>
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="py-5">
+    <div class="container">
+        <h2 class="text-center mb-5">Get in Touch</h2>
+
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <form>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" placeholder="Email" required>
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-gradient btn-lg w-100">
+                        Send Message
+                    </button>
+                </form>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">&copy; 2025 Douglas Arigah. All Rights Reserved.</p>
-    </footer>
+<!-- ================= FOOTER ================= -->
+<footer class="bg-dark text-white text-center py-3">
+    <p class="mb-0">&copy; 2026 Douglas Arigah. All Rights Reserved.</p>
+</footer>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script>
-        // Smooth scrolling for nav links
-        document.querySelectorAll('a.nav-link').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                document.querySelector(targetId).scrollIntoView({ behavior: 'smooth' });
-            });
+<!-- ================= SCRIPTS ================= -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+
+<script>
+    // Smooth scrolling
+    document.querySelectorAll('a.nav-link').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector(this.getAttribute('href'))
+                .scrollIntoView({ behavior: 'smooth' });
         });
-    </script>
+    });
+
+    // Hero Wave Animation
+    anime.timeline()
+        .add({
+            targets: '.hero-wave',
+            opacity: [0, 1],
+            scale: [0.97, 1],
+            duration: 1200,
+            easing: 'easeOutExpo'
+        })
+        .add({
+            targets: '.hero-wave',
+            translateY: [
+                { value: -8, duration: 2500 },
+                { value: 8, duration: 2500 }
+            ],
+            translateX: [
+                { value: -6, duration: 4000 },
+                { value: 6, duration: 4000 }
+            ],
+            easing: 'easeInOutSine',
+            direction: 'alternate',
+            loop: true
+        });
+</script>
+
 </body>
 </html>
